@@ -1,0 +1,25 @@
+# Golang CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-go/ for more details
+version: 2
+jobs:
+  build:
+    docker:
+      # specify the version
+      - image: circleci/golang:1.10
+      
+    working_directory: /go/src/github.com/lnxjedi/gopherbot
+    steps:
+      - checkout
+
+      # specify any bash command here prefixed with `run: `
+
+      # Get the github publishing tool
+      - run: go get github.com/lnxjedi/github-release
+      - run: go get -v -t -d ./...
+
+      # Build
+      - run: ./mkdist.sh
+
+      # Publish
+      - run: ./publish.sh
