@@ -1,16 +1,0 @@
-language: go
-go:
-- "1.10"
-script: ./mkdist.sh
-before_deploy:
-- git tag -d v1.0.0-snapshot
-- git tag v1.0.0-snapshot
-deploy:
-  provider: releases
-  prerelease: true
-  api_key: $GH_OAUTH_TOKEN
-  file_glob: true
-  file: gopherbot-*.zip
-  skip_cleanup: true
-  overwrite: true
-  tags: true
